--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="main-wrapper">
   <header>
-    <h1 tabindex="0">
+    <h1 role="heading" tabindex="0">
       {{title}}
     </h1>
   </header>
   <main class="groceries-wrapper">
-    <section class="groceries-list-container">
-      <div *ngFor="let grocery of groceries; let i = index;" class="groceries-item" tabindex="0">
+    <section class="groceries-list-container" role="list">
+      <div *ngFor="let grocery of groceries; let i = index;" role="listitem"class="groceries-item" tabindex="0">
         <div [attr.area-lable]="grocery.qty" class="grocery-qty" tabindex="0">
           qty: {{grocery.qty}}
         </div>
